--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,8 @@
 </div>
 
 <div>
-  <input [(ngModel)]="userName" /> <br/><br/>
+  <input (input)="onInput($event)" [(ngModel)]="userName" /> <br/><br/>
+  <span class = error-output>{{this.nameError}}</span>
 </div>
 
 
